# passworphobia-app

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml  test.yml
libs/password-generator/: package.json  password_generator.d.ts  password_generator.js  password_generator_bg.js  password_generator_bg.wasm  password_generator_bg.wasm.d.ts
password-generator/: Cargo.toml  README.md  index.html
password-generator/src/: lib.rs
public/lang/: et.json  fr.json  ru.json  ua.json
src/: App.svelte  app.css  fire.ts  lang.ts  loginpage.html  main.ts  storage.ts  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: en.json  firebase.config.json
src/components/: DeleteMenu.svelte  ElementLock.svelte  Generator.svelte  GeneratorSettings.svelte  LangBtn.svelte  LockPass.svelte  PassButton.svelte  PassInput.svelte  PassOutput.svelte  Profile.svelte  Settings.svelte  SizeController.svelte  SwitchState.svelte  SymbolChoice.svelte  Title.svelte  VisibilityButton.svelte
src/components/Lock/: LockPass.svelte
src/components/Main/: Generator.svelte  GeneratorSettings.svelte  LangBtn.svelte  PassButton.svelte  PassInput.svelte  PassOutput.svelte
src/components/Settings/: Settings.svelte
src/pages/: Lock.svelte  Main.svelte  Settings.svelte
