[package]
name = "password-generator"
authors = ["Perfect Duo"]
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
sha2 = "0.10.7"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"

[profile.release]
lto = true
opt-level = "s"


